# anek

./: Cargo.toml  Makefile  PKGBUILD  README.org  anek-editor.desktop  anek.desktop
.anek/batch/: all
.anek/commands/: echo_mean  echo_sd  echo_skew  echo_test
.anek/inputs/: sample3
.anek/inputs/sample1.d/: test
.anek/templates/: render_test.org
completions/: bash-completions.sh
emacs/: anek-mode.el
resources/: editor.ui  org.anek.AnekEditor.gschema.xml  window.ui
sample/: render_test.org
sample/.anek/batch/: all
sample/.anek/commands/: echo  echo_mean  echo_test  gnuplot  pdf  pdf_loop  test
sample/.anek/favorites/: diff  natural
sample/.anek/inputs/: sample1  sample2  title  xmin
sample/.anek/inputs/individual/: observed
sample/.anek/loops/mean/: filename  xtics
sample/.anek/loops/test/: mean
sample/.anek/pipelines/: echo+gnuplot  echo_both
sample/.anek/variables/: filename  mean  xmax  xtics
sample/contents/: normal-dist-pdf.gp  normal-dist.gp
sample/favorites/: diff
sample/loops/mean/: mean
src/: completions.rs  dtypes.rs  edit.rs  editor.rs  export.rs  graph.rs  gui.rs  input.rs  lib.rs  list.rs  main.rs  new.rs  render.rs  report.rs  run.rs  run_utils.rs  show.rs  variable.rs  view.rs
tests/: new.rs
