[package]
name = "anek"
version = "0.2.0"
edition = "2021"
author = "Gaurav Atreya"
about = "simple tool to run command templates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
clap_complete = "4.0.7"
colored = "2.0.0"
itertools = "0.10.5"
new_string_template = "1.4.0"
subprocess = "0.2.9"

[dev-dependencies]
assert_cmd = "2.0.8"
assert_fs = "1.0.10"
rstest = "0.16.0"
